@@ -169,8 +169,7 @@ ADD_CUSTOM_TARGET(uninstall "${CMAKE_COMMAND}" -P "${CMAKE_CURRENT_BINARY_DIR}/c
 
 ADD_SUBDIRECTORY( src )
 ADD_SUBDIRECTORY( tools )
-# no tests available
-# ADD_SUBDIRECTORY( tests )
+ADD_SUBDIRECTORY( cmake )
 
 MARK_AS_ADVANCED( CLEAR BUILD_DOCUMENTATION )
 #IF ( BUILD_DOCUMENTATION )
